GR4-231 fix: adjust css of dashboard to avoid overlapping with the sidebar

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -2,12 +2,6 @@ body {
   overflow-x: hidden; /* Hides horizontal scrollbar */
 }
 
-/* Admin content */
-.admin-content {
-  margin-left: 260px;
-  padding: 20px;
-}
-
 .welcome-section {
   background-color: #fff6da;
   padding: 20px;
